# cosmo-data-update-quest

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.all.txt  requirements.dev.txt  requirements.doc.txt  requirements.txt  sonar-project.properties
.github/workflows/: generate_gh_page.yml  lint.yml  test.yml  track_dependencies.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/guides/: index.html
0.1.0/guides/redis_backups/: index.html
0.1.0/guides/redis_io/: index.html
0.1.0/migrations/3.1_to_3.2/: index.html
0.1.0/notes/example/: index.html
0.1.0/notes/kubernetes-redis-migration-solution/: index.html
0.1.0/notes/kubernetes-redis-technologies/: index.html
0.1.0/notes/kubernetes-upgrade-tool-analysis/: index.html
0.1.0/notes/redis-migration-tool-summary/: index.html
0.1.0/search/: search_index.json
cosmotech/data_update_quest/: cli.py
cosmotech/data_update_quest/cli/: __main__.py
cosmotech/data_update_quest/core/: __init__.py
cosmotech/data_update_quest_cli/: __main__.py
docker-scripts/: entrypoint.py  run.json
docs/: .nav.yml  index.md
docs/guides/: .nav.yml  index.md  redis_backups.md  redis_io.md
docs/migrations/: 3.1_to_3.2.md
docs/notes/: example.md  external-scripts-access-patterns.md  kubernetes-redis-technologies.md  redis-migration-tool-summary.md
notes/: kubernetes-redis-migration-solution.md  kubernetes-upgrade-tool-analysis.md  redis-migration-tool-summary.md
tests/migration/: test_parameterized_migration.py
(+23 files in other folders)
